--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
         </p></div> <div class="col-md-4 mb-4 mb-md-0"><h5 class="text-uppercase mb-4 text-muted">Address</h5> <p class="text-muted mb-2"><i class="fas fa-map-marker-alt pe-2"></i>
           Address Here, 0000 - District - 00000-000
         </p></div></div></div> <div class="text-center"><div class="text-center text-muted"><a href="/" target="_blank" class="fw-bold">SiteSys</a> <small>v1.0 - by</small> <span class="fw-bold">Mask</span>
-      © <span data-toggle="year-copy"></span></div></div></footer></div></div></div><script defer src="/_nuxt/static/1659757687/state.js"></script><script src="/_nuxt/5555367.js" defer></script><script src="/_nuxt/488b427.js" defer></script><script src="/_nuxt/c9c34b3.js" defer></script><script src="/_nuxt/d673092.js" defer></script><script src="/_nuxt/ce9701d.js" defer></script>
+      © <span data-toggle="year-copy"></span></div></div></footer></div></div></div><script defer src="./_nuxt/static/1659757687/state.js"></script><script src="./_nuxt/5555367.js" defer></script><script src="./_nuxt/488b427.js" defer></script><script src="./_nuxt/c9c34b3.js" defer></script><script src="./_nuxt/d673092.js" defer></script><script src="./_nuxt/ce9701d.js" defer></script>
   </body>
 </html>
